@@ -902,7 +902,7 @@ subtest 'Perform job in a running event loop' => sub {
   is_deeply $minion->job($id)->info->{result}, {added => 17}, 'right result';
 };
 
-subtest 'Non-zero exit status' => sub {
+subtest 'Job terminated unexpectedly' => sub {
   plan skip_all => 'Minion workers do not support fork emulation' if HAS_PSEUDOFORK;
   $minion->add_task(exit => sub { exit 1 });
   my $id  = $minion->enqueue('exit');
@@ -911,7 +911,7 @@ subtest 'Non-zero exit status' => sub {
   is $job->id, $id, 'right id';
   $job->perform;
   is $job->info->{state}, 'failed', 'right state';
-  is $job->info->{result}, 'Non-zero exit status (1)', 'right result';
+  ok $job->info->{result}, 'error message in result';
   $worker->unregister;
 };
 
@@ -932,9 +932,9 @@ subtest 'Multiple attempts while processing' => sub {
     is $job->retries, 0, 'job has not been retried';
     $job->perform;
     my $info = $job->info;
-    is $info->{attempts}, 2,                          'job will be attempted twice';
-    is $info->{state},    'inactive',                 'right state';
-    is $info->{result},   'Non-zero exit status (1)', 'right result';
+    is $info->{attempts}, 2,          'job will be attempted twice';
+    is $info->{state},    'inactive', 'right state';
+    ok $info->{result},   'error message in result';
     ok $info->{retried} < $info->{delayed}, 'delayed timestamp';
     $minion->backend->sqlite->db->query(
       q{update minion_jobs set delayed = datetime('now') where id = ?}, $id);
@@ -943,9 +943,9 @@ subtest 'Multiple attempts while processing' => sub {
     is $job->retries, 1, 'job has been retried once';
     $job->perform;
     $info = $job->info;
-    is $info->{attempts}, 2,                          'job will be attempted twice';
-    is $info->{state},    'failed',                   'right state';
-    is $info->{result},   'Non-zero exit status (1)', 'right result';
+    is $info->{attempts}, 2,        'job will be attempted twice';
+    is $info->{state},    'failed', 'right state';
+    ok $info->{result},   'error message in result';
     ok $job->retry({attempts => 3}), 'job retried';
     $job = $worker->register->dequeue(0);
     is $job->id, $id, 'right id';
@@ -953,7 +953,7 @@ subtest 'Multiple attempts while processing' => sub {
     $info = $job->info;
     is $info->{attempts}, 3,        'job will be attempted three times';
     is $info->{state},    'failed', 'right state';
-    is $info->{result}, 'Non-zero exit status (1)', 'right result';
+    ok $info->{result},   'error message in result';
     $worker->unregister;
   }
 };
@@ -1033,7 +1033,7 @@ subtest 'Perform jobs concurrently' => sub {
   is $minion->job($id3)->info->{state},  'finished', 'right state';
   is $minion->job($id3)->info->{result}, undef,      'no result';
   is $minion->job($id4)->info->{state},  'failed',   'right state';
-  is $minion->job($id4)->info->{result}, 'Non-zero exit status (1)', 'right result';
+  ok $minion->job($id4)->info->{result}, 'error message in result';
   $worker->unregister;
 };
 
@@ -1052,8 +1052,8 @@ subtest 'Stopping jobs' => sub {
   ok !$job->is_finished, 'job is not finished';
   $job->stop;
   usleep 5000 until $job->is_finished;
-  is $job->info->{state}, 'failed', 'right state';
-  like $job->info->{result}, qr/Non-zero exit status/, 'right result';
+  is $job->info->{state},  'failed', 'right state';
+  ok $job->info->{result}, 'error message in result';
   $minion->enqueue('long_running');
   $job = $worker->dequeue(0);
   ok $job->start->pid, 'has a process id';
@@ -1064,8 +1064,8 @@ subtest 'Stopping jobs' => sub {
   is $job->info->{state}, 'active', 'right state';
   $job->kill('INT');
   usleep 5000 until $job->is_finished;
-  is $job->info->{state},    'failed',                 'right state';
-  like $job->info->{result}, qr/Non-zero exit status/, 'right result';
+  is $job->info->{state},  'failed', 'right state';
+  ok $job->info->{result}, 'error message in result';
   $worker->unregister;
 };
 
