@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fixed tests to be less sensitive to error message contents.
 
 v5.0.0    2020-06-17 01:22:45 EDT
   - Minion requirement bumped to 10.03.
